8-create-k8s-istio-gateway-site/hubble-ui-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hubble-vs
spec:
  gateways:
    - "istio-system/local-k8s-gateway"
  hosts:
    - "hubble-ui.local.k8s.com"
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: hubble-ui
            port:
              number: 80
